# mango_place

./: .gitignore  LICENSE  README.md  app.py  build_development.sh  build_production.sh  config.py  conftest.py  db.py  helper.py  package.json  pyproject.toml  run_development.sh  run_production.sh  test_db.py  tsconfig.json  webpack.config.js
static/scss/: index.scss
static/ts/: index.ts
static/ts/board/: board.component.html  board.component.scss  board.component.ts  board.module.ts  boardimage.ts  boardmode.ts
static/ts/board/animator/: animator.ts
static/ts/board/controls/: boardcontrols.component.html  boardcontrols.component.scss  boardcontrols.component.ts
static/ts/board/controls/button/: boardcontrolbutton.component.html  boardcontrolbutton.component.scss  boardcontrolbutton.component.ts
static/ts/board/ratelimiter/: boardratelimiter.ts
static/ts/board/toastcontainer/: boardtoastcontainer.component.html  boardtoastcontainer.component.ts
static/ts/board/toastmanager/: boardtoastmanager.ts
static/ts/bootstrap/: bootstrap.module.ts
static/ts/bootstrap/modal/: modal.component.html  modal.component.ts
static/ts/bootstrap/tooltip/: tooltip.directive.ts
static/ts/index/: app.component.html  app.component.scss  app.component.ts  app.module.ts
static/ts/modal/: modal.component.ts  modal.module.ts
static/ts/modal/body/: modalbody.component.ts
static/ts/modal/footer/: modalfooter.component.ts
static/ts/util/: authdetector.ts  mutex.ts  waitable.ts
templates/: index.html
tests/: conftest.py  test_app.py  test_db.py
(+2 files in other folders)
