[tool.poetry]
name = "mango-place"
version = "0.1.0"
description = "Inspired by Reddit's r/place, MangoPlace is a fun space for friends to share a canvas!"
authors = []
license = "MIT"

[tool.poetry.dependencies]
flask = "^2.2.3"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
