[tool.poetry]
name = "mango-place"
version = "0.1.0"
description = "Inspired by Reddit's r/place, MangoPlace is a fun space for friends to share a canvas!"
authors = []
license = "MIT"

[tool.poetry.dependencies]
bcrypt = "^4.0.1"
flask = "^2.2.3"
gunicorn = "^20.1.0"
numpy = "^1.25.0"
python = "^3.10"
pillow = "^9.5.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
